[gd_scene load_steps=5 format=2]

[ext_resource path="res://level/DungeonExit.gd" type="Script" id=1]
[ext_resource path="res://UI/FadeScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="DungeonExit" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="FadeScene" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="." to="." method="_on_DungeonExit_body_entered"]
[connection signal="transitioned" from="FadeScene" to="." method="_on_FadeScene_transitioned"]
